<resources>
    <string name="app_name">Smart mailbox</string>
    <string name="camera_access_error">You can not scan until you give the camera permission.</string>
    <string name="internet_access_error">You have not alowed internet access.</string>
    <string name="camera_access_granted">You gave the camera permission.</string>
    <string name="internet_access_granted">You gave the internet access permission.</string>
    <string name="scan_successful">Scan successful.</string>
    <string name="open_mailbox">Open mailbox</string>
    <string name="no_values_error">No values</string>
    <string name="scan_qr">Scan QR</string>
    <string name="back">back</string>
    <string name="empty">this field can not be empty</string>
    <string name="add_access">Add access</string>
    <string name="add">add</string>
    <string name="username">username</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="time_to">Time to</string>
    <string name="time_from">Time from</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login_with_camera">login with camera</string>
    <string name="login">login</string>
    <string name="add_picture_for_login">Add picture for login</string>
    <string name="my_mailboxes">my mailboxes</string>
    <string name="logout">Logout</string>
    <string name="exit">exit</string>
    <string name="register">register</string>
    <string name="email">Email</string>
</resources>