<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccessActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hglInsertWorkOrderActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.1" />

    <Button
        android:id="@+id/btnInsertWorkOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:onClick="onClickAccess"
        android:text="@string/add"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateTo"
        tools:ignore="OnClick" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/et_padding"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hglInsertWorkOrderActivity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/add_access"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/hglInsertWorkOrderActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/et_padding"
        android:text="@string/date_from"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeFrom"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/tvTimeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/et_padding"
        android:text="@string/time_from"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDateFrom"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/tvDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/et_padding"
        android:text="@string/date_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeTo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateFrom" />

    <TextView
        android:id="@+id/tvTimeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:layout_marginTop="8dp"
        android:padding="@dimen/et_padding"
        android:text="@string/time_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDateTo"
        app:layout_constraintTop_toBottomOf="@+id/tvDateFrom" />

</androidx.constraintlayout.widget.ConstraintLayout>