<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnAddPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:onClick="addPictureClick"
        android:text="@string/add_picture_for_login"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyMailboxes" />

    <Button
        android:id="@+id/btnScanCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openScanCodeActivityForResult"
        android:text="@string/open_mailbox"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_25"
        app:layout_constraintBottom_toTopOf="@+id/btnMyMailboxes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnMyMailboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openMyMailboxes"
        android:text="@string/my_mailboxes"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_25"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanCode" />
</androidx.constraintlayout.widget.ConstraintLayout>